--- a/error.htm
+++ b/error.htm
@@ -146,14 +146,15 @@ span.f_Heading1 { color: black; }
 <p style="text-indent: 9px;">В случае возникновения неисправимой ошибки/исключения появится окно сообщения об ошибке,</p>
 <p style="text-indent: 9px;">которое потом дублируется &nbsp;на статусной панели.</p>
 <p style="text-indent: 2px;">&nbsp;</p>
-<p style="text-indent: 2px;">&nbsp;</p>
-<div style="text-indent: 79px; margin: 0px 0px 0px 127px;"><div style="width:411px;padding:0px"><img src="error2.png" width="411" height="123" style="border:none" alt="Окно сообщения о неисправимой ошибке" title="Окно сообщения о неисправимой ошибке" /><p style="text-align:center"><span class="f_ImageCaption">Окно сообщения о неисправимой ошибке<br/>
-</span></p></div></div>
+<p style="text-indent: 79px; margin: 0px 0px 0px 127px;">&nbsp;</p>
+<p style="text-indent: 135px;"><img id="DicomDatDiff" src="dicomdatdiff1.png" width="357" height="166" alt="Окно сообщения о неисправимой ошибке" title="Окно сообщения о неисправимой ошибке" style="border:none" /></p>
+<div style="text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 103px;"><table style="border:none;border-spacing:0px;padding:0px;line-height: normal;"><tr style="vertical-align:baseline"><td style="border:none;padding:0;width:3px"></td><td style="border:none;padding:0"><span class="f_ImageCaption"> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Окно сообщения о неисправимой ошибке</span></td></tr></table></div><p style="text-indent: 79px; margin: 0px 0px 0px 127px;">&nbsp;</p>
+<p style="text-indent: 79px; margin: 0px 0px 0px 127px;">&nbsp;</p>
 <p style="text-indent: 2px;">&nbsp;</p>
 <div style="text-indent: 132px;"><div style="width:563px;padding:0px"><img src="error1.png" width="563" height="161" style="border:none" alt="Сообщения о неисправимой ошибке" title="Сообщения о неисправимой ошибке" /><p style="text-align:center"><span class="f_ImageCaption">Сообщения о неисправимой ошибке<br/>
 </span></p></div></div>
 <p style="text-indent: 2px;">&nbsp;</p>
-<p> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком по адресу: <span style="font-weight: bold;">valeriy.onuchin@yandex.ru </span></p>
+<p style="text-indent: -193px; margin: 0px 0px 0px 193px;"> &nbsp; По поводу исправления ошибок, вопросов, пожеланий, можно связаться с разработчиком по адресу: <span style="font-weight: bold;">valeriy.onuchin@yandex.ru </span></p>
 
 <!--ZOOMSTOP-->
 </div></div>
